--- a/WeatherApp/Resources/Styles/Styles.xaml
+++ b/WeatherApp/Resources/Styles/Styles.xaml
@@ -142,14 +142,22 @@
         <Setter Property="CornerRadius" Value="0"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
+
                 <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="Disabled">
+                    <VisualState x:Name="Normal">
                         <VisualState.Setters>
-                            <Setter Property="Opacity" Value="0.5" />
+                            <Setter Property="Opacity"
+                            Value="1" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="Pressed">
+                        <VisualState.Setters>
+                            <Setter Property="Opacity"
+                            Value="0.5" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
+
             </VisualStateGroupList>
         </Setter>
     </Style>
