--- a/WeatherApp/Views/TownInfoPage.xaml
+++ b/WeatherApp/Views/TownInfoPage.xaml
@@ -6,10 +6,25 @@
              Background="#111"
               xmlns:chart="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
              xmlns:vm="clr-namespace:WeatherApp.ViewsModels"
-              xmlns:lvcore="clr-namespace:LiveChartsCore;assembly=LiveChartsCore">
-             
+              xmlns:lvcore="clr-namespace:LiveChartsCore;assembly=LiveChartsCore"
+               xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
 
-        <ScrollView>
+             >
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Order="Primary" Text="Выйти">
+            <ToolbarItem.IconImageSource>
+                <FontImageSource
+                    Glyph="{x:Static fa:Solid.Heart}"
+                    Color="{Binding ColorForTown}"
+                    FontFamily="FASolid">
+                    
+                </FontImageSource>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
+    </ContentPage.ToolbarItems>
+    <ScrollView>
 
         <VerticalStackLayout Padding="10">
         <Label HorizontalOptions="Center" TextColor="White" FontSize="30"  VerticalOptions="Start" Text="{Binding TownInfo.name}"></Label>
@@ -20,7 +35,7 @@
 
             <Label TextColor="White" Text="По дням:" FontSize="23" FontAttributes="Bold"></Label>
 
-            <CollectionView ItemsLayout="HorizontalList" HeightRequest="150" ItemsSource="{Binding ListDailyData}" SelectedItem="{Binding DailyData}" SelectionMode="Single" x:Name="coll1">
+            <CollectionView ItemsLayout="HorizontalList" HeightRequest="150" ItemsSource="{Binding ListDailyData}" SelectedItem="{Binding DailyData}" SelectionChangedCommand="{Binding SelectionChanged}" SelectionMode="Single" x:Name="coll1">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                             <Grid Padding="10,40,0,0" Margin="0,0,0,10" WidthRequest="150" HeightRequest="150" >
@@ -56,7 +71,7 @@
                 </chart:CartesianChart>
             </Grid>
             <Line HeightRequest="2" Margin="0,0,0,10" Background="#373737"/>
-            <Grid BackgroundColor="Black" Padding="15">
+            <Grid Margin="0,0,0,10" BackgroundColor="#80373737" Padding="15">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                     <ColumnDefinition Width="auto"></ColumnDefinition>
@@ -70,9 +85,18 @@
                     <Label TextColor="White" FontAttributes="Bold" FontSize="23"  Text="{Binding DailyData.temperature_2m_min, StringFormat='Min: {0}'}"></Label>
                     <Label TextColor="White" FontAttributes="Bold" FontSize="23" Text="{Binding DailyData.temperature_2m_max, StringFormat='Max: {0}'}"></Label>
             </StackLayout>
+            
 
-
-        </Grid>
+             </Grid>
+            <Grid Padding="10" BackgroundColor="#80373737">
+                <StackLayout>
+                  
+                <Label TextColor="White" FontAttributes="Bold" FontSize="23" Text="Выбрать свой интервал"></Label>
+                    <material:DatePickerField TextColor="White" Margin="0,10,0,0" Title="Выбрать дату" >
+                        
+                    </material:DatePickerField>
+                </StackLayout>
+            </Grid>
     </VerticalStackLayout>
     </ScrollView>
 
