--- a/WeatherApp/Views/AuthorizePage.xaml
+++ b/WeatherApp/Views/AuthorizePage.xaml
@@ -29,12 +29,12 @@
 
                     <uranium:TextField Text="{Binding Login}" CornerRadius="5" Icon="{x:FontImage FontFamily=FASolid, Color=White, Glyph={x:Static fa:Solid.User}}" BorderColor="White" Margin="0,10,0,10"  TitleColor="White" AccentColor="LightGreen" TextColor="White"  Title="Логин" >
                         <uranium:TextField.Validations>
-                            <validation:MinLengthValidation MinLength="5"></validation:MinLengthValidation>
+                            <validation:MinLengthValidation MinLength="5" Message="мин 5 символов"></validation:MinLengthValidation>
                         </uranium:TextField.Validations>
                     </uranium:TextField>
                     <uranium:TextField Text="{Binding Password}"  CornerRadius="5" IsPassword="True" Icon="{x:FontImage FontFamily=FASolid, Color=White, Glyph={x:Static fa:Solid.Key}}" BorderColor="White"  Margin="0,0,0,10"   AccentColor="LightGreen" TitleColor="White" TextColor="White"  Title="Пароль">
                         <uranium:TextField.Validations>
-                            <validation:MinLengthValidation MinLength="8"></validation:MinLengthValidation>
+                            <validation:MinLengthValidation MinLength="8" Message="мин 8 символов"></validation:MinLengthValidation>
                         </uranium:TextField.Validations>
                     </uranium:TextField>
                     <Button Command="{Binding AutorizeUser}" Opacity="1" CornerRadius="10" TextColor="White" StyleClass="FilledButton" BackgroundColor="#ab2446"   Text="Войти" Margin="0,0,0,10">
