--- a/WeatherApp/Views/TownInfoPage.xaml
+++ b/WeatherApp/Views/TownInfoPage.xaml
@@ -66,7 +66,7 @@
 
 
             <Grid  Padding="5"  Margin="0,0,0,20" HeightRequest="300">
-                <chart:CartesianChart ZoomMode="X" AnimationsSpeed="00:00:00.500" EasingFunction="{Binding Source={x:Static lvcore:EasingFunctions.BounceOut}}" YAxes="{Binding YAxes}" Background="white" Series="{Binding Series}" XAxes="{Binding XAxes}">
+                <chart:CartesianChart AnimationsSpeed="00:00:00.500" TooltipTextSize="30" TooltipPosition="Top" LegendTextSize="30" EasingFunction="{Binding Source={x:Static lvcore:EasingFunctions.BounceOut}}" YAxes="{Binding YAxes}" Background="white" Series="{Binding Series}" XAxes="{Binding XAxes}">
                     
                 </chart:CartesianChart>
             </Grid>
@@ -82,8 +82,8 @@
             </StackLayout>
           
             <StackLayout Grid.Column="1">
-                    <Label TextColor="White" FontAttributes="Bold" FontSize="23"  Text="{Binding DailyData.temperature_2m_min, StringFormat='Min: {0}'}"></Label>
-                    <Label TextColor="White" FontAttributes="Bold" FontSize="23" Text="{Binding DailyData.temperature_2m_max, StringFormat='Max: {0}'}"></Label>
+                    <Label TextColor="White" FontAttributes="Bold" FontSize="23"  Text="{Binding DailyData.temperature_2m_min, StringFormat='Min: {0} C'}"></Label>
+                    <Label TextColor="White" FontAttributes="Bold" FontSize="23" Text="{Binding DailyData.temperature_2m_max, StringFormat='Max: {0} C'}"></Label>
             </StackLayout>
             
 
@@ -92,9 +92,15 @@
                 <StackLayout>
                   
                 <Label TextColor="White" FontAttributes="Bold" FontSize="23" Text="Выбрать свой интервал"></Label>
-                    <material:DatePickerField TextColor="White" Margin="0,10,0,0" Title="Выбрать дату" >
-                        
-                    </material:DatePickerField>
+                    <StackLayout>
+                        <Label Text="От"  FontAttributes="Bold" TextColor="White" FontSize="20" ></Label>
+                        <material:DatePickerField Date="{Binding StartDate}"  x:Name="DateStart" TextColor="White" Margin="0,10,0,0" Title="Выбрать дату" TitleColor="White"/>
+                    </StackLayout>
+                    <StackLayout Margin="0,0,0,10">
+                        <Label Text="До" FontAttributes="Bold" TextColor="White" FontSize="20"></Label>
+                        <material:DatePickerField Date="{Binding EndDate}" x:Name="DateEnd"  TextColor="White" Margin="0,10,0,0" Title="Выбрать дату" TitleColor="White"/>
+                    </StackLayout>
+                    <Button Command="{Binding ChangeInterval}" BackgroundColor="#141be0" Text="Применить"></Button>
                 </StackLayout>
             </Grid>
     </VerticalStackLayout>
